# private-group-project

./: app.py  index.html  models.py  pyproject.toml  theme.json  utils.py  vite.config.ts
attached_assets/: Pasted-1-Functional-Requirements-FRs-These-define-what-the-system-must-do-to-meet-its-objectives-1-1-U-1741078937422.txt
client/src/: App.tsx
client/src/components/: calendar-view.tsx
client/src/components/layout/: navbar.tsx
client/src/pages/: appointments.tsx  auth-page.tsx  dashboard.tsx  doctor-availability.tsx
server/: auth.ts  routes.ts  storage.ts
shared/: schema.ts
